Consume updated CSV to seed schools
