# server/db/seedFiles/states.js
@@ -1,59 +1,59 @@
 const states = [
-  { name: 'ALABAMA', standard: 'Ala.', postal: 'AL' },
-  { name: 'ALASKA', standard: 'Alaska', postal: 'AK' },
-  { name: 'ARIZONA', standard: 'Ariz.', postal: 'AZ' },
-  { name: 'ARKANSAS', standard: 'Ark.', postal: 'AR' },
-  { name: 'CALIFORNIA', standard: 'Calif.', postal: 'CA' },
-  { name: 'CANAL ZONE', standard: 'C.Z.', postal: 'CZ' },
-  { name: 'COLORADO', standard: 'Colo.', postal: 'CO' },
-  { name: 'CONNECTICUT', standard: 'Conn.', postal: 'CT' },
-  { name: 'DELAWARE', standard: 'Del.', postal: 'DE' },
-  { name: 'DISTRICT OF COLUMBIA', standard: 'D.C.', postal: 'DC' },
-  { name: 'FLORIDA', standard: 'Fla.', postal: 'FL' },
-  { name: 'GEORGIA', standard: 'Ga.', postal: 'GA' },
-  { name: 'GUAM', standard: 'Guam', postal: 'GU' },
-  { name: 'HAWAII', standard: 'Hawaii', postal: 'HI' },
-  { name: 'IDAHO', standard: 'Idaho', postal: 'ID' },
-  { name: 'ILLINOIS', standard: 'Ill.', postal: 'IL' },
-  { name: 'INDIANA', standard: 'Ind.', postal: 'IN' },
-  { name: 'IOWA', standard: 'Iowa', postal: 'IA' },
-  { name: 'KANSAS', standard: 'Kan.', postal: 'KS' },
-  { name: 'KENTUCKY', standard: 'Ky.', postal: 'KY' },
-  { name: 'LOUISIANA', standard: 'La.', postal: 'LA' },
-  { name: 'MAINE', standard: 'Maine', postal: 'ME' },
-  { name: 'MARYLAND', standard: 'Md.', postal: 'MD' },
-  { name: 'MASSACHUSETTS', standard: 'Mass.', postal: 'MA' },
-  { name: 'MICHIGAN', standard: 'Mich.', postal: 'MI' },
-  { name: 'MINNESOTA', standard: 'Minn.', postal: 'MN' },
-  { name: 'MISSISSIPPI', standard: 'Miss.', postal: 'MS' },
-  { name: 'MISSOURI', standard: 'Mo.', postal: 'MO' },
-  { name: 'MONTANA', standard: 'Mont.', postal: 'MT' },
-  { name: 'NEBRASKA', standard: 'Neb.', postal: 'NE' },
-  { name: 'NEVADA', standard: 'Nev.', postal: 'NV' },
-  { name: 'NEW HAMPSHIRE', standard: 'N.H.', postal: 'NH' },
-  { name: 'NEW JERSEY', standard: 'N.J.', postal: 'NJ' },
-  { name: 'NEW MEXICO', standard: 'N.M.', postal: 'NM' },
-  { name: 'NEW YORK', standard: 'N.Y.', postal: 'NY' },
-  { name: 'NORTH CAROLINA', standard: 'N.C.', postal: 'NC' },
-  { name: 'NORTH DAKOTA', standard: 'N.D.', postal: 'ND' },
-  { name: 'OHIO', standard: 'Ohio', postal: 'OH' },
-  { name: 'OKLAHOMA', standard: 'Okla.', postal: 'OK' },
-  { name: 'OREGON', standard: 'Ore.', postal: 'OR' },
-  { name: 'PENNSYLVANIA', standard: 'Pa.', postal: 'PA' },
-  { name: 'PUERTO RICO', standard: 'P.R.', postal: 'PR' },
-  { name: 'RHODE ISLAND', standard: 'R.I.', postal: 'RI' },
-  { name: 'SOUTH CAROLINA', standard: 'S.C.', postal: 'SC' },
-  { name: 'SOUTH DAKOTA', standard: 'S.D.', postal: 'SD' },
-  { name: 'TENNESSEE', standard: 'Tenn.', postal: 'TN' },
-  { name: 'TEXAS', standard: 'Texas', postal: 'TX' },
-  { name: 'UTAH', standard: 'Utah', postal: 'UT' },
-  { name: 'VERMONT', standard: 'Vt.', postal: 'VT' },
-  { name: 'VIRGIN ISLANDS', standard: 'V.I.', postal: 'VI' },
-  { name: 'VIRGINIA', standard: 'Va.', postal: 'VA' },
-  { name: 'WASHINGTON', standard: 'Wash.', postal: 'WA' },
-  { name: 'WEST VIRGINIA', standard: 'W.Va.', postal: 'WV' },
-  { name: 'WISCONSIN', standard: 'Wis.', postal: 'WI' },
-  { name: 'WYOMING', standard: 'Wyo.', postal: 'WY' },
+  { id: 0, name: 'ALABAMA', standard: 'Ala.', postal: 'AL' },
+  { id: 1, name: 'ALASKA', standard: 'Alaska', postal: 'AK' },
+  { id: 2, name: 'ARIZONA', standard: 'Ariz.', postal: 'AZ' },
+  { id: 3, name: 'ARKANSAS', standard: 'Ark.', postal: 'AR' },
+  { id: 4, name: 'CALIFORNIA', standard: 'Calif.', postal: 'CA' },
+  { id: 5, name: 'CANAL ZONE', standard: 'C.Z.', postal: 'CZ' },
+  { id: 6, name: 'COLORADO', standard: 'Colo.', postal: 'CO' },
+  { id: 7, name: 'CONNECTICUT', standard: 'Conn.', postal: 'CT' },
+  { id: 8, name: 'DELAWARE', standard: 'Del.', postal: 'DE' },
+  { id: 9, name: 'DISTRICT OF COLUMBIA', standard: 'D.C.', postal: 'DC' },
+  { id: 10, name: 'FLORIDA', standard: 'Fla.', postal: 'FL' },
+  { id: 11, name: 'GEORGIA', standard: 'Ga.', postal: 'GA' },
+  { id: 12, name: 'GUAM', standard: 'Guam', postal: 'GU' },
+  { id: 13, name: 'HAWAII', standard: 'Hawaii', postal: 'HI' },
+  { id: 14, name: 'IDAHO', standard: 'Idaho', postal: 'ID' },
+  { id: 15, name: 'ILLINOIS', standard: 'Ill.', postal: 'IL' },
+  { id: 16, name: 'INDIANA', standard: 'Ind.', postal: 'IN' },
+  { id: 17, name: 'IOWA', standard: 'Iowa', postal: 'IA' },
+  { id: 18, name: 'KANSAS', standard: 'Kan.', postal: 'KS' },
+  { id: 19, name: 'KENTUCKY', standard: 'Ky.', postal: 'KY' },
+  { id: 20, name: 'LOUISIANA', standard: 'La.', postal: 'LA' },
+  { id: 21, name: 'MAINE', standard: 'Maine', postal: 'ME' },
+  { id: 22, name: 'MARYLAND', standard: 'Md.', postal: 'MD' },
+  { id: 23, name: 'MASSACHUSETTS', standard: 'Mass.', postal: 'MA' },
+  { id: 24, name: 'MICHIGAN', standard: 'Mich.', postal: 'MI' },
+  { id: 25, name: 'MINNESOTA', standard: 'Minn.', postal: 'MN' },
+  { id: 26, name: 'MISSISSIPPI', standard: 'Miss.', postal: 'MS' },
+  { id: 27, name: 'MISSOURI', standard: 'Mo.', postal: 'MO' },
+  { id: 28, name: 'MONTANA', standard: 'Mont.', postal: 'MT' },
+  { id: 29, name: 'NEBRASKA', standard: 'Neb.', postal: 'NE' },
+  { id: 30, name: 'NEVADA', standard: 'Nev.', postal: 'NV' },
+  { id: 31, name: 'NEW HAMPSHIRE', standard: 'N.H.', postal: 'NH' },
+  { id: 32, name: 'NEW JERSEY', standard: 'N.J.', postal: 'NJ' },
+  { id: 33, name: 'NEW MEXICO', standard: 'N.M.', postal: 'NM' },
+  { id: 34, name: 'NEW YORK', standard: 'N.Y.', postal: 'NY' },
+  { id: 35, name: 'NORTH CAROLINA', standard: 'N.C.', postal: 'NC' },
+  { id: 36, name: 'NORTH DAKOTA', standard: 'N.D.', postal: 'ND' },
+  { id: 37, name: 'OHIO', standard: 'Ohio', postal: 'OH' },
+  { id: 38, name: 'OKLAHOMA', standard: 'Okla.', postal: 'OK' },
+  { id: 39, name: 'OREGON', standard: 'Ore.', postal: 'OR' },
+  { id: 40, name: 'PENNSYLVANIA', standard: 'Pa.', postal: 'PA' },
+  { id: 41, name: 'PUERTO RICO', standard: 'P.R.', postal: 'PR' },
+  { id: 42, name: 'RHODE ISLAND', standard: 'R.I.', postal: 'RI' },
+  { id: 43, name: 'SOUTH CAROLINA', standard: 'S.C.', postal: 'SC' },
+  { id: 44, name: 'SOUTH DAKOTA', standard: 'S.D.', postal: 'SD' },
+  { id: 45, name: 'TENNESSEE', standard: 'Tenn.', postal: 'TN' },
+  { id: 46, name: 'TEXAS', standard: 'Texas', postal: 'TX' },
+  { id: 47, name: 'UTAH', standard: 'Utah', postal: 'UT' },
+  { id: 48, name: 'VERMONT', standard: 'Vt.', postal: 'VT' },
+  { id: 49, name: 'VIRGIN ISLANDS', standard: 'V.I.', postal: 'VI' },
+  { id: 50, name: 'VIRGINIA', standard: 'Va.', postal: 'VA' },
+  { id: 51, name: 'WASHINGTON', standard: 'Wash.', postal: 'WA' },
+  { id: 52, name: 'WEST VIRGINIA', standard: 'W.Va.', postal: 'WV' },
+  { id: 53, name: 'WISCONSIN', standard: 'Wis.', postal: 'WI' },
+  { id: 54, name: 'WYOMING', standard: 'Wyo.', postal: 'WY' },
 ];
 
 module.exports = states;
